--- a/DAL/DAL.csproj
+++ b/DAL/DAL.csproj
@@ -76,6 +76,7 @@
     <None Include="App.config" />
     <None Include="packages.config" />
     <None Include="Resources\datasetqframe.csv" />
+    <None Include="Resources\datasetqframeVersie2.csv" />
   </ItemGroup>
   <ItemGroup>
     <ProjectReference Include="..\Domain\Domain.csproj">
@@ -87,6 +88,7 @@
     <EmbeddedResource Include="Properties\Resources.resx">
       <Generator>PublicResXFileCodeGenerator</Generator>
       <LastGenOutput>Resources.Designer.cs</LastGenOutput>
+      <SubType>Designer</SubType>
     </EmbeddedResource>
   </ItemGroup>
   <Import Project="$(MSBuildToolsPath)\Microsoft.CSharp.targets" />
