--- a/UI-MVC/UI-MVC.csproj
+++ b/UI-MVC/UI-MVC.csproj
@@ -457,7 +457,7 @@
     <Content Include="fonts\glyphicons-halflings-regular.svg" />
     <Content Include="Global.asax" />
     <None Include="Resources\datasetqframe.csv" />
-    <None Include="Resources\JavaSussolApplicationV11.dll" />
+    <None Include="Resources\datasetqframeVersie2.csv" />
     <None Include="Resources\JavaSussolApplicationV12.dll" />
     <Content Include="Scripts\ai.0.15.0-build58334.js" />
     <Content Include="Scripts\ai.0.15.0-build58334.min.js" />
