--- a/UI-MVC/packages.config
+++ b/UI-MVC/packages.config
@@ -5,6 +5,7 @@
   <package id="Autofac.Mvc5" version="3.3.4" targetFramework="net452" />
   <package id="Autofac.WebApi2" version="3.4.0" targetFramework="net452" />
   <package id="bootstrap" version="3.0.0" targetFramework="net452" />
+  <package id="CsvHelper" version="2.16.3.0" targetFramework="net452" />
   <package id="EntityFramework" version="6.1.3" targetFramework="net452" />
   <package id="FluentValidation" version="6.4.1" targetFramework="net452" />
   <package id="FontAwesome" version="4.4.0" targetFramework="net452" />
