--- a/UI-MVC/UI-MVC.csproj
+++ b/UI-MVC/UI-MVC.csproj
@@ -159,6 +159,10 @@
     <Reference Include="JavaSussolApplicationV12_4">
       <HintPath>..\..\..\..\..\..\ikvm\bin\JavaSussolApplicationV12_4.dll</HintPath>
     </Reference>
+    <Reference Include="JavaSussolApplicationV12_5, Version=0.0.0.0, Culture=neutral, processorArchitecture=MSIL">
+      <SpecificVersion>False</SpecificVersion>
+      <HintPath>..\..\..\Downloads\JavaSussolApplicationV12_5.dll</HintPath>
+    </Reference>
     <Reference Include="Json, Version=1.0.0.0, Culture=neutral, PublicKeyToken=c6752e45808247c2, processorArchitecture=MSIL">
       <HintPath>..\packages\JSON.1.0.1\lib\net40\Json.dll</HintPath>
       <Private>True</Private>
