--- a/UI-MVC/UI-MVC.csproj
+++ b/UI-MVC/UI-MVC.csproj
@@ -421,6 +421,80 @@
     <Content Include="Content\Images\molecule.svg" />
     <Content Include="Content\Images\molecules-bag.jpg" />
     <Content Include="Content\Images\organisationLogo.jpg" />
+    <Content Include="Content\Images\Png\100-41-4.png" />
+    <Content Include="Content\Images\Png\103-23-1.png" />
+    <Content Include="Content\Images\Png\103-65-1.png" />
+    <Content Include="Content\Images\Png\105-53-3.png" />
+    <Content Include="Content\Images\Png\106-36-5.png" />
+    <Content Include="Content\Images\Png\106-42-3.png" />
+    <Content Include="Content\Images\Png\106-65-0.png" />
+    <Content Include="Content\Images\Png\107-06-2.png" />
+    <Content Include="Content\Images\Png\107-87-9.png" />
+    <Content Include="Content\Images\Png\107-92-6.png" />
+    <Content Include="Content\Images\Png\108-10-1.png" />
+    <Content Include="Content\Images\Png\108-20-3.png" />
+    <Content Include="Content\Images\Png\108-21-4.png" />
+    <Content Include="Content\Images\Png\108-67-8.png" />
+    <Content Include="Content\Images\Png\108-88-3.png" />
+    <Content Include="Content\Images\Png\109-60-4.png" />
+    <Content Include="Content\Images\Png\109-66-0.png" />
+    <Content Include="Content\Images\Png\109-99-9.png" />
+    <Content Include="Content\Images\Png\110-19-0.png" />
+    <Content Include="Content\Images\Png\111-43-3.png" />
+    <Content Include="Content\Images\Png\111-65-9.png" />
+    <Content Include="Content\Images\Png\111-76-2.png" />
+    <Content Include="Content\Images\Png\111-77-3.png" />
+    <Content Include="Content\Images\Png\111-84-2.png" />
+    <Content Include="Content\Images\Png\111-90-0.png" />
+    <Content Include="Content\Images\Png\111-96-6.png" />
+    <Content Include="Content\Images\Png\123-25-1.png" />
+    <Content Include="Content\Images\Png\123-51-3.png" />
+    <Content Include="Content\Images\Png\123-86-4.png" />
+    <Content Include="Content\Images\Png\123-92-2.png" />
+    <Content Include="Content\Images\Png\127-19-5.png" />
+    <Content Include="Content\Images\Png\1330-20-7.png" />
+    <Content Include="Content\Images\Png\137-32-6.png" />
+    <Content Include="Content\Images\Png\138-86-3.png" />
+    <Content Include="Content\Images\Png\142-82-5.png" />
+    <Content Include="Content\Images\Png\156-59-2.png" />
+    <Content Include="Content\Images\Png\156-60-5.png" />
+    <Content Include="Content\Images\Png\1634-04-4.png" />
+    <Content Include="Content\Images\Png\56-23-5.png" />
+    <Content Include="Content\Images\Png\5614-37-9.png" />
+    <Content Include="Content\Images\Png\590-01-2.png" />
+    <Content Include="Content\Images\Png\5989-27-5.png" />
+    <Content Include="Content\Images\Png\60-29-7.png" />
+    <Content Include="Content\Images\Png\627-93-0.png" />
+    <Content Include="Content\Images\Png\628-63-7.png" />
+    <Content Include="Content\Images\Png\64-17-5.png" />
+    <Content Include="Content\Images\Png\64-19-7.png" />
+    <Content Include="Content\Images\Png\67-56-1.png" />
+    <Content Include="Content\Images\Png\67-63-0.png" />
+    <Content Include="Content\Images\Png\67-66-3.png" />
+    <Content Include="Content\Images\Png\67-68-5.png" />
+    <Content Include="Content\Images\Png\68-12-2.png" />
+    <Content Include="Content\Images\Png\71-23-8.png" />
+    <Content Include="Content\Images\Png\71-36-3.png" />
+    <Content Include="Content\Images\Png\71-55-6.png" />
+    <Content Include="Content\Images\Png\75-05-8.png" />
+    <Content Include="Content\Images\Png\75-34-3.png" />
+    <Content Include="Content\Images\Png\75-35-4.png" />
+    <Content Include="Content\Images\Png\78-78-4.png" />
+    <Content Include="Content\Images\Png\78-83-1.png" />
+    <Content Include="Content\Images\Png\78-92-2.png" />
+    <Content Include="Content\Images\Png\78-93-3.png" />
+    <Content Include="Content\Images\Png\79-00-5.png" />
+    <Content Include="Content\Images\Png\79-01-6.png" />
+    <Content Include="Content\Images\Png\79-09-4.png" />
+    <Content Include="Content\Images\Png\79-31-2.png" />
+    <Content Include="Content\Images\Png\84-66-2.png" />
+    <Content Include="Content\Images\Png\84-74-2.png" />
+    <Content Include="Content\Images\Png\872-50-4.png" />
+    <Content Include="Content\Images\Png\95-47-6.png" />
+    <Content Include="Content\Images\Png\96-47-9.png" />
+    <Content Include="Content\Images\Png\99-87-6.png" />
+    <Content Include="Content\Images\Png\994-05-8.png" />
+    <Content Include="Content\Images\Png\Hexane.png" />
     <Content Include="Content\Images\presentation.svg" />
     <Content Include="Content\Images\random1.jpg" />
     <Content Include="Content\Images\random2.jpg" />
