--- a/DAL/packages.config
+++ b/DAL/packages.config
@@ -2,5 +2,7 @@
 <packages>
   <package id="EntityFramework" version="6.1.3" targetFramework="net452" />
   <package id="FluentValidation" version="6.4.1" targetFramework="net452" />
+  <package id="IKVM" version="8.1.5717.0" targetFramework="net452" />
+  <package id="Newtonsoft.Json" version="8.0.3" targetFramework="net452" />
   <package id="NuGet.CommandLine" version="3.3.0" targetFramework="net452" />
 </packages>
