--- a/DAL/DAL.csproj
+++ b/DAL/DAL.csproj
@@ -161,7 +161,7 @@
       <Private>True</Private>
     </Reference>
     <Reference Include="JavaSussolApplicationV20">
-      <HintPath>..\..\..\Downloads\JavaSussolApplicationV20.dll</HintPath>
+      <HintPath>..\..\..\..\..\..\ikvm\bin\JavaSussolApplicationV20.dll</HintPath>
     </Reference>
     <Reference Include="Newtonsoft.Json, Version=8.0.0.0, Culture=neutral, PublicKeyToken=30ad4fe6b2a6aeed, processorArchitecture=MSIL">
       <HintPath>..\packages\Newtonsoft.Json.8.0.3\lib\net45\Newtonsoft.Json.dll</HintPath>
@@ -170,6 +170,7 @@
     <Reference Include="System" />
     <Reference Include="System.ComponentModel.DataAnnotations" />
     <Reference Include="System.Core" />
+    <Reference Include="System.Web" />
     <Reference Include="System.Xml.Linq" />
     <Reference Include="System.Data.DataSetExtensions" />
     <Reference Include="Microsoft.CSharp" />
@@ -194,9 +195,9 @@
   </ItemGroup>
   <ItemGroup>
     <None Include="App.config" />
+    <None Include="DefaultTrainingSets\datasetqframe.csv" />
+    <None Include="DefaultTrainingSets\datasetqframeVersie2.csv" />
     <None Include="packages.config" />
-    <None Include="Resources\datasetqframe.csv" />
-    <None Include="Resources\datasetqframeVersie2.csv" />
   </ItemGroup>
   <ItemGroup>
     <ProjectReference Include="..\Domain\Domain.csproj">
@@ -212,7 +213,7 @@
     </EmbeddedResource>
   </ItemGroup>
   <ItemGroup>
-    <Folder Include="DefaultTrainingSets\" />
+    <Folder Include="Resources\" />
   </ItemGroup>
   <Import Project="$(MSBuildToolsPath)\Microsoft.CSharp.targets" />
   <!-- To modify your build process, add your task inside one of the targets below and uncomment it. 
