--- a/DAL/DAL.csproj
+++ b/DAL/DAL.csproj
@@ -160,8 +160,9 @@
       <HintPath>..\packages\IKVM.8.1.5717.0\lib\IKVM.Runtime.JNI.dll</HintPath>
       <Private>True</Private>
     </Reference>
-    <Reference Include="JavaSussolApplicationV20">
-      <HintPath>..\..\..\..\..\..\ikvm\bin\JavaSussolApplicationV20.dll</HintPath>
+    <Reference Include="JavaSussolApplicationV20, Version=0.0.0.0, Culture=neutral, processorArchitecture=MSIL">
+      <SpecificVersion>False</SpecificVersion>
+      <HintPath>..\UI-MVC\Dll\JavaSussolApplicationV20.dll</HintPath>
     </Reference>
     <Reference Include="Newtonsoft.Json, Version=8.0.0.0, Culture=neutral, PublicKeyToken=30ad4fe6b2a6aeed, processorArchitecture=MSIL">
       <HintPath>..\packages\Newtonsoft.Json.8.0.3\lib\net45\Newtonsoft.Json.dll</HintPath>
