--- a/UI-MVC/UI-MVC.csproj
+++ b/UI-MVC/UI-MVC.csproj
@@ -156,9 +156,9 @@
     <Reference Include="IKVM.Runtime.JNI, Version=8.1.5717.0, Culture=neutral, PublicKeyToken=13235d27fcbfff58, processorArchitecture=MSIL">
       <HintPath>..\packages\IKVM.8.1.5717.0\lib\IKVM.Runtime.JNI.dll</HintPath>
     </Reference>
-    <Reference Include="JavaSussolApplicationV12_5, Version=0.0.0.0, Culture=neutral, processorArchitecture=MSIL">
+    <Reference Include="JavaSussolApplicationV20, Version=0.0.0.0, Culture=neutral, processorArchitecture=MSIL">
       <SpecificVersion>False</SpecificVersion>
-      <HintPath>..\..\..\Downloads\JavaSussolApplicationV12_5.dll</HintPath>
+      <HintPath>Dll\JavaSussolApplicationV20.dll</HintPath>
     </Reference>
     <Reference Include="Json, Version=1.0.0.0, Culture=neutral, PublicKeyToken=c6752e45808247c2, processorArchitecture=MSIL">
       <HintPath>..\packages\JSON.1.0.1\lib\net40\Json.dll</HintPath>
@@ -528,6 +528,7 @@
     <Content Include="Content\Views\Error.html" />
     <Content Include="Content\Views\Organisation\Create.html" />
     <Content Include="Content\Views\Organisation\Home.html" />
+    <Content Include="Dll\JavaSussolApplicationV20.dll" />
     <Content Include="favicon.ico" />
     <Content Include="fonts\fontawesome-webfont.svg" />
     <Content Include="fonts\glyphicons-halflings-regular.svg" />
