--- a/UI-MVC/UI-MVC.csproj
+++ b/UI-MVC/UI-MVC.csproj
@@ -579,6 +579,7 @@
     <Content Include="Scripts\html2canvas.js" />
     <Content Include="Scripts\notie.js" />
     <Content Include="Scripts\ocanvas-2.8.4.js" />
+    <Content Include="Scripts\pdfmake.min.js" />
     <Content Include="Scripts\radial-progress-bar.js" />
     <Content Include="Scripts\tabs.js" />
     <Content Include="Scripts\Controllers\AccountController.js" />
