--- a/UI-MVC/Web.config
+++ b/UI-MVC/Web.config
@@ -14,6 +14,7 @@
   <appSettings>
     <add key="UsersImgPath" value="~/Content/Images/Users" />
     <add key="OrganisationsImgPath" value="~/Content/Images/Organisations" />
+    <add key="defaultCsvPath" value="DefaultTrainingSets"/>
   </appSettings>
   <system.web>
     <authentication mode="None" />
